# flake8_single_tuple

./: .gitignore  Cargo.toml  README.md  pyproject.toml
flake8_single_tuple/: plugin.py
src/: lib.rs
tests/: test_plugin.py
