[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "flake8-single-tuple"
requires-python = ">=3.9,<3.13"
dependencies = [
    "flake8",
]
dynamic = ["version"]

[project.entry-points."flake8.extension"]
STC = "flake8_single_tuple.plugin:SingleTupleChecker"

[tool.maturin]
# This points to the Rust source
module-name = "flake8_single_tuple.rust_tuple_scanner"
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "maturin",
    "pytest",
]